# NTLP

./: .gitignore  CMakeLists.txt  HPCMPles.run  HPCMPparams.in  Makefile  README.md  bcast_pbc.F  benchmark_approximation.f90  blnk.F  busngr.F  close_his.F  comp1.F  data_structures.f90  defs.F  droplet_model.f90  end_probe.F  extra_flux_terms.F  fft.f  fft2d_mpi.F  forcing.F  fzol.F  get_dt.F  get_fields.F  get_max.F  get_means.F  get_output_filenames.F  get_units.F  get_zi.F  gridd.F  inference_test.f90  init.F  iso.F  kdtree.f90  les.F  les.run  les_CRAY.F  lower_dns.F  main1.F  measurement.f90  mpi_send_root.F  (+56 more)
REMOVE_AFTER_SPLIT/: rename.py  split_instructions.txt
documentation/: README.md
documentation/explanation/: ntlp-overview.md
documentation/tutorials/: post-processing-simulations.md  setup-and-run.md
droplet_approximation/: README.md
droplet_approximation/config/: crc_config.ini
droplet_approximation/config/error_analysis/: crc_error_analysis_defaults.ini  direct.ini  iterative.ini
droplet_approximation/config/simulation/: cfog-30percent.ini  crc_simulation_defaults.ini  fatima-30percent.ini  pi_chamber_1way-rh103.ini  pi_chamber_2way.ini  spray-5percent.ini
droplet_approximation/data/: README.md
droplet_approximation/documentation/: Makefile  dydt_jacobian.tex  transition_document.tex
droplet_approximation/model/: onnxModel.txt  onnxWeights.txt
droplet_approximation/models/: README.md  mlp_4layer-b=1024-lr=1e-3_halvingschedule-l2reg=1e-6.pth  mlp_4layer-b=256-lr=1e-3.pt  network_400m.pth  network_400m_jagged.pth  network_400m_jagged_weighted.pth  network_400m_weighted.pth  network_box_residual_l1_epoch_14.pth  network_box_residual_l1_epoch_5.pt
droplet_approximation/notebooks/: Approximating Droplet Parameters.ipynb  ODE Exploration.ipynb  Particle Data Exploration.ipynb  cusum_validation_test.ipynb  data_to_training_file.ipynb  dataframe_error_analysis.ipynb  error_analysis.ipynb  graphing_examples.ipynb  history_postprocessing.ipynb  loss_testing.ipynb
droplet_approximation/python/: conda_packages.txt  pyproject.toml
droplet_approximation/python/droplet_approximation/: __init__.py  analysis.py  config.py  data.py  models.py  names.py  physics.py  scoring.py  wandb.py
droplet_approximation/rosenna/: activation_funcs.f90  derived_types.f90  layers.f90  modelCreator.f90  reader.f90  variables.fpp
postprocessing/: compare_history_postprocessing.m  history_postprocessing.m  quick_viz.m  reference_history.nc  viz_postprocessing.m
subroutines/: calc_tot_tnumpart.F  comp2.F  comp_p.F  dealias.F  exchange.F  f_suft2.F  get_derv.F  lower.F  lterp.F  main.F  mpi_gath_root.F  mpi_sum_z_s.F  nblnk.F  open_probe.F  open_viz.F  part_maxes.F  pbltop.F  pp_flux.F  pressure.F  probe_locator.F  ranf.F  recv_ytox.F  recv_ztox.F  save_v.F  send_xtoy.F  set_sav.F  tvar_budget.F  upper.F  write_probe.F  write_prof.F  xderivp.F  yd_mpi.F  ytox_trans.F  ztox_trans.F
test_cases/: README.md
test_cases/cfog/: cfog.run  params.in
test_cases/channel/: channel.run  params.in
test_cases/fatima/: fatima.run  params.in
test_cases/pi_chamber/: clean.sh  params.in  pi_chamber.run
test_cases/spray/: params.in  spray.run
